--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/static/cryoData/
 Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/static/video/sample-mp4-video-file-download (720p).mp4
 Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/static/video/sample-mp4-video-file-download (1080p).mp4
 zip_buffer
-Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/routes.py
+venv/
