--- a/Web-Azure/requirements.txt
+++ b/Web-Azure/requirements.txt
@@ -1,12 +1,12 @@
-azure-storage-file-share
-Azure-storage-blob
+azure-storage-file-share==12.12.0
+azure-storage-blob==12.16.0
 cffi==1.14.0
 click==7.1.1
 Flask>=1.1.1
-Flask-Bcrypt>=0.7.1
-Flask-Login>=0.5.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.2
 Flask-WTF==0.14.3
-Flask-Mail
+Flask-Mail==0.9.1
 Cython
 imagecodecs==2020.5.30
 itsdangerous==1.1.0
