--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/static/video/sample-mp4-video-file-
 Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/static/video/sample-mp4-video-file-download (1080p).mp4
 zip_buffer
 venv/
+generateWebFiles/
