--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/.azure/config
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/.azure/config
@@ -1,7 +1,7 @@
 [defaults]
 group = WebViewer
 sku = B1
-appserviceplan = byy981109_asp_4905
+appserviceplan = ASP-WebViewer-a9c4
+web = WebViewerBiv
 location = eastus
-web = WebViewerBIV
 
